<?xml version="1.0"?>
<package format="3">
  <name>ros_hw</name>
  <version>0.0.0</version>
  <description>3-DOF sensor simulation with ROS2 Python and custom service</description>
  <maintainer email="urafiq@jhfletcher.com">urafiq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
